# developers-assessment-v2

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  DECISIONS.md  README.md  backend.md  docker-compose.yml  frontend.md  fullstack.md  sample-responses.json  schema.dbml
backend/: .dockerignore  AGENTS.md  DECISIONS.md  Dockerfile  README.backend.md  README.md  docker-compose.yml  docker-entrypoint.sh  generate-remittances.json  nest-cli.json  package-lock.json  package.json  prisma.config.ts  pyproject.toml  requirements.txt  sample-responses-remitted-worklog.json  sample-responses-unremitted-worklog.json  sample-responses.json  schema.dbml  schema.sql  tsconfig.build.json  tsconfig.json
backend/app/: config.py  main.py  models.py  schemas.py  seed_data.py
backend/app/routers/: remittances.py  worklogs.py
backend/app/services/: money.py  remittance.py
backend/prisma/: schema.prisma  seed.ts
backend/src/: app.module.ts  config.js  config.py  config.ts  database.py  database.ts  main.js  main.py  main.ts  migrate.ts
backend/src/app/: __init__.py  config.py  constants.py  database.py  envelope.py  main.py  seed.py
backend/src/common/: domain.validation.ts  envelope-exception.filter.ts  envelope.interceptor.ts  money.ts  money.util.ts  request-id.middleware.ts  response-envelope.interceptor.ts  validators.ts
backend/src/config/: configuration.ts
backend/src/database/: data-source.ts  init.sql  (+5 more)
backend/test/: app.e2e-spec.ts  settlement.e2e-spec.ts  worklog.e2e-spec.ts
backend/tests/: __init__.py  conftest.py  factories.py  test_api_contract.py
(+124 files in other folders)
