[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worklog-settlement-api"
version = "0.1.0"
description = "WorkLog settlement and remittance API (assessment)"
readme = "README.backend.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<0.136",
    "uvicorn[standard]>=0.32.0,<0.36",
    "sqlalchemy>=2.0.40,<2.1",
    "psycopg[binary]>=3.2.0,<4",
    "pydantic>=2.10.0,<3",
    "pydantic-settings>=2.6.0,<3",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0,<0.29",
    "pytest>=8.3.0,<9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
